--- a/student-api/src/main/resources/application.properties
+++ b/student-api/src/main/resources/application.properties
@@ -2,6 +2,7 @@ spring.application.name=student-api
 spring.datasource.url=jdbc:mysql://localhost:3306/student_db?useSSL=false&serverTimezone=UTC
 spring.datasource.username=root
 spring.datasource.password=
+# spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jpa.show-sql=true
